--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</div>
 	 
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 	<script src="responsive.js"></script>
 
 </body>
